- More work on design - Modified review and save page to scroll internally, always showing save button - Added cancel to add deck process - Changed deck listing preview on save and review page - Added moving bird to deck listing and settings page - Reverted add text to a popup prompt to avoid the squashed image view

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -45,7 +45,7 @@ div.card-preview-gallery
 	float: left;
 	margin-right: 3%;
 	margin-bottom: 20px;
-	width: 47%;		
+	width: 47%;			
 }
 
 
@@ -77,6 +77,7 @@ div.card-player-image
 	width: 100vw;
 	height: 70vh;	
 	overflow: hidden;
+	margin-top: 8vh;
 }
 
 img.card-player
@@ -109,6 +110,11 @@ img.card-player
 	float: left;
 	margin-right: 10px;
 	margin-left: 3%;
+}
+
+div.deck-preview-card
+{
+	width: 93vw;
 }
 
 button
@@ -153,6 +159,12 @@ div.deck-title-img
 {
 	float: left;
 	
+}
+
+ion-scroll.review-save-scroll
+{
+	width: 97vw;
+	height: 75vh;	
 }
 
 ion-item.menu-list-item
